--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-25 [说弄错了？北京许诺不再强对美国外交人员肛拭子检测](/articles/rfi/1034044.md)
+
+2-25 [美国防部高官修正有关钓鱼岛主权发言](/articles/rfi/1034045.md)
+
+2-25 [华为遭西方封锁 在中东日益茁壮 – 法国国际广播电台 - RFI](/articles/rfi/1034046.md)
+
 2-25 [路透社：越来越多英国议员认为首相约翰逊应就新疆问题加大对华施压力度](/articles/rfi/1034047.md)
 
 2-25 [沾光习近平表扬脱贫贡献 阿里巴巴股票由黑翻红](/articles/rfi/1034048.md)
@@ -594,10 +600,4 @@
 2-21 [俄罗斯境内发现全球首批H5N8禽流感传人病例 已通报世卫](/articles/rfi/1034342.md)
 
 2-21 [阿根廷和秘鲁接种Covid疫苗插队丑闻](/articles/rfi/1034343.md)
-
-2-21 [法国敦刻尔克英国变种病毒猛增 青年患者居多](/articles/rfi/1034344.md)
-
-2-21 [俄罗斯在叙利亚大轰炸 至少21名圣战者丧生](/articles/rfi/1034345.md)
-
-2-21 [法外长：我们已和中国进入对外发展模式和影响力之战](/articles/rfi/1034346.md)
 
