--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-25 [疫情受控下 新加坡外籍劳工仍被强制隔离](/articles/voa/1042648.md)
+
 2-25 [韩国与伊朗达成资产解冻协议 称实际解冻前会与美国磋商](/articles/voa/1042649.md)
 
 2-25 [澳大利亚通过新法迫使科技公司支付新闻费](/articles/voa/1042650.md)
@@ -598,6 +600,4 @@
 2-14 [中国拒绝提供疫情早期数据 白宫对世卫小组在中国调查的独立性“深表关注”](/articles/voa/1042946.md)
 
 2-14 [疫情卷土重来 澳门博彩业春节黄金档前景未明](/articles/voa/1042947.md)
-
-2-14 [缅甸抗议示威进入第二周 军方无意妥协 抗议者在中国使馆外示威](/articles/voa/1042948.md)
 
