--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+2-25 [日本政府称有可能对中国海警船“危害射击”](/articles/rfi/1034039.md)
+
+2-25 [向华强依亲居留台湾申请遭驳](/articles/rfi/1034040.md)
+
+2-25 [法国家庭医生周四起可替病患施打阿斯利康AZ新冠疫苗](/articles/rfi/1034041.md)
+
+2-25 [获北京许可 美国驻香港领馆完成其香港地产出售交易](/articles/rfi/1034042.md)
+
+2-25 [北京称坚决反对个别国家就涉疆问题对中国无端指责](/articles/rfi/1034043.md)
+
 2-25 [说弄错了？北京许诺不再强对美国外交人员肛拭子检测](/articles/rfi/1034044.md)
 
 2-25 [美国防部高官修正有关钓鱼岛主权发言](/articles/rfi/1034045.md)
@@ -590,14 +600,4 @@
 2-21 [德媒：不要沉溺于拜登消除跨大西洋利益分歧的幻想](/articles/rfi/1034337.md)
 
 2-21 [中共为何高调纪念华国锋 毛新宇罕见现身](/articles/rfi/1034338.md)
-
-2-21 [缅甸越来越血腥 - 要闻分析](/articles/rfi/1034339.md)
-
-2-21 [欧盟谴责缅甸军方暴力镇压和平示威者](/articles/rfi/1034340.md)
-
-2-21 [国际原子能机构总干事格罗西抵达德黑兰会晤伊朗高官](/articles/rfi/1034341.md)
-
-2-21 [俄罗斯境内发现全球首批H5N8禽流感传人病例 已通报世卫](/articles/rfi/1034342.md)
-
-2-21 [阿根廷和秘鲁接种Covid疫苗插队丑闻](/articles/rfi/1034343.md)
 
