--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-25 [GDP的2%用来“输血”:中国召开脱贫表彰大会](/articles/dw/1043705.md)
+
+2-25 [向华强父子移民台湾遭拒 民进党立委赞决定正确](/articles/dw/1043706.md)
+
 2-25 [向华强父子移民台湾申请遭拒 民进党立委赞“正确决定”](/articles/dw/1043707.md)
 
 2-25 [对华逆差巨大 印度出新政奖励本土产品](/articles/dw/1043708.md)
@@ -596,8 +600,4 @@
 2-9 [香港法院裁决 黎智英持续被押](/articles/dw/1044003.md)
 
 2-9 [缅甸军方承诺举办选举 美国重申与人民同在](/articles/dw/1044004.md)
-
-2-9 [世卫忧心新冠变异 不放弃阿斯利康疫苗](/articles/dw/1044005.md)
-
-2-9 [被控假新闻 福克斯台“挺川”主播下课](/articles/dw/1044006.md)
 
