--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-25 [中国凭借海军规模压制南中国海周边声索国](/articles/voa/1042644.md)
+
+2-25 [印度与巴基斯坦同意在克什米尔印巴实控线沿线停火](/articles/voa/1042645.md)
+
+2-25 [奥运圣火传递3月25日起跑 奥委会公布观赏准则](/articles/voa/1042646.md)
+
 2-25 [中国“十四五规划”承诺应对气变 增长和安全或拖后腿](/articles/voa/1042647.md)
 
 2-25 [疫情受控下 新加坡外籍劳工仍被强制隔离](/articles/voa/1042648.md)
@@ -594,10 +600,4 @@
 2-14 [经历一夜恐惧，成千上万缅甸抗议者无惧军方撤法继续走上街头](/articles/voa/1042942.md)
 
 2-14 [美国参议院判决特朗普无罪](/articles/voa/1042943.md)
-
-2-14 [阿富汗边境大火导致至少60人受伤](/articles/voa/1042944.md)
-
-2-14 [日本发生强震，导致大面积断电](/articles/voa/1042945.md)
-
-2-14 [中国拒绝提供疫情早期数据 白宫对世卫小组在中国调查的独立性“深表关注”](/articles/voa/1042946.md)
 
