--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-26 [约翰森：英国将就新疆问题追责中国 但不赞成抵制冬奥会](/articles/voa/1042643.md)
+
 2-25 [中国凭借海军规模压制南中国海周边声索国](/articles/voa/1042644.md)
 
 2-25 [印度与巴基斯坦同意在克什米尔印巴实控线沿线停火](/articles/voa/1042645.md)
@@ -598,6 +600,4 @@
 2-14 [参议院宣布特朗普在第二次弹劾案中无罪](/articles/voa/1042941.md)
 
 2-14 [经历一夜恐惧，成千上万缅甸抗议者无惧军方撤法继续走上街头](/articles/voa/1042942.md)
-
-2-14 [美国参议院判决特朗普无罪](/articles/voa/1042943.md)
 
