--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-26 [全球COVID-19逾1亿1251万例确诊 249万多人病故 – 法国国际广播电台 - RFI](/articles/rfi/1034024.md)
+
 2-26 [法国维族协会起诉耐克雇佣新疆强迫劳工](/articles/rfi/1034025.md)
 
 2-26 [日本或用“危害射击”法阻吓中国海警“开枪”法 北京说什么？](/articles/rfi/1034026.md)
@@ -598,6 +600,4 @@
 2-21 [张雪忠推「国民制宪」公投后被当局带走一天 推特屏蔽帖文](/articles/rfi/1034322.md)
 
 2-21 [本周起接种 但科委会指科兴疫苗短期难达群体效应 港官以通关利诱市民打针](/articles/rfi/1034323.md)
-
-2-21 [豪华帆船游艇Phocea起火 沉没于马来西亚近海 – 法国国际广播电台 - RFI](/articles/rfi/1034324.md)
 
