--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,22 @@
 自由亚洲电台
 ------
 
+2-26 [美众院外委会通过法案和决议案  抵制北京奥运 关注香港](/articles/rfa/1046285.md)
+
+2-26 [离婚获5万元赔偿  “全职太太”引爆舆论](/articles/rfa/1046286.md)
+
+2-26 [凤凰卫视高层异动     已成央视分台？](/articles/rfa/1046287.md)
+
+2-26 [基础学科加入国安内容  香港教育“大陆化”](/articles/rfa/1046288.md)
+
+2-26 [拜登下令检讨供应链   ”小院高墙“应对中国？](/articles/rfa/1046289.md)
+
+2-26 [习近平为什么如此重视全面脱贫？](/articles/rfa/1046290.md)
+
+2-26 [联合国人权理事会多国谴责中国在新疆侵犯人权罪行](/articles/rfa/1046291.md)
+
+2-26 [“中国通”马凯：新疆是中共数字极权主义的试验田](/articles/rfa/1046292.md)
+
 2-26 [中国打击“非法宗教”运动持续进行  延烧南方多个省份](/articles/rfa/1046293.md)
 
 2-25 [中国公布宗教法 台外长批“中共就是中国宗教的神”](/articles/rfa/1046294.md)
@@ -584,20 +600,4 @@
 1-27 [中国经济前景未明    权威学者为永久取消GDP指标造势](/articles/rfa/1046583.md)
 
 1-27 [官方宣称物价“温和上涨”     基层反映粮价早已翻倍](/articles/rfa/1046584.md)
-
-1-27 [北京新增肛门检测新冠    民众感侮辱放弃进京过年](/articles/rfa/1046585.md)
-
-1-27 [拜登不会急于处理对华关系  国务卿任命获通过](/articles/rfa/1046586.md)
-
-1-27 [记者采访疑被打伤引关注 本人翻脸说是“摔伤”](/articles/rfa/1046587.md)
-
-1-27 [学者：中共铁拳治疆会重蹈帝国衰败的覆辙](/articles/rfa/1046588.md)
-
-1-27 [专访张海：武汉疫情受害者家属要求与世卫专家会面](/articles/rfa/1046589.md)
-
-1-27 [瑞典、法、德、英逾6成民众对中国持负面印象](/articles/rfa/1046590.md)
-
-1-27 [数十名维吾尔人遭土耳其警方逮捕  被送入遣返中心](/articles/rfa/1046591.md)
-
-1-27 [大屠杀受难者纪念日，英国犹太领袖声援维吾尔人](/articles/rfa/1046592.md)
 
