--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+2-26 [拔起新疆种族灭绝的“萝卜” 带出抵制北京冬奥会的“泥 ” - 要闻分析](/articles/rfi/1034013.md)
+
+2-26 [荷兰国会通过动议　称中国在新疆进行“种族灭绝”](/articles/rfi/1034014.md)
+
+2-26 [向中国问责 戴琦：美国可助制定新贸易规则](/articles/rfi/1034015.md)
+
+2-26 [美众院外委会通过法案   防堵中国靠冬奥进行大外宣](/articles/rfi/1034016.md)
+
+2-26 [“同性恋是心理障碍”教材案二审仍败诉](/articles/rfi/1034017.md)
+
+2-26 [“大鼻子情圣”被控强奸和性侵    自己高喊是清白的](/articles/rfi/1034018.md)
+
+2-26 [中国海军扩张 全球军事支出去年达创纪录水平 – 法国国际广播电台 - RFI](/articles/rfi/1034019.md)
+
+2-26 [戴琪：美国可助制定新贸易规则 向中国问责 – 法国国际广播电台 - RFI](/articles/rfi/1034020.md)
+
+2-26 [法国第一届“文化之都”标志活动初赛选出9城市 - 法国风光](/articles/rfi/1034021.md)
+
 2-26 [世卫欧洲区主任呼吁重视研究2019冠状病毒疾病的长期症状](/articles/rfi/1034022.md)
 
 2-26 [梵高罕见画作下月将在巴黎拍卖](/articles/rfi/1034023.md)
@@ -582,22 +600,4 @@
 2-21 [加入斯坦福大学胡佛研究所后，博明介绍抗疫经验教训](/articles/rfi/1034311.md)
 
 2-21 [乔科维奇击败梅迪维夫  缔造澳网9度封王纪录 – 法国国际广播电台 - RFI](/articles/rfi/1034312.md)
-
-2-21 [中国与印度留学生减少 法国商校担忧 - 法国报纸摘要](/articles/rfi/1034313.md)
-
-2-21 [缅甸局势动荡  美中持续博弈 - 曼谷专栏](/articles/rfi/1034314.md)
-
-2-21 [解放军11架次军机进入台湾西南空域 规模为本月最大](/articles/rfi/1034315.md)
-
-2-21 [澳网男双 多迪格与波拉西克夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1034316.md)
-
-2-21 [乔科维奇澳网决赛对上梅迪维夫 赞对手如棋手机智 – 法国国际广播电台 - RFI](/articles/rfi/1034317.md)
-
-2-21 [美国遣返95岁前纳粹集中营警卫 ICE官员：永不会停止追捕那些迫害他人的人](/articles/rfi/1034318.md)
-
-2-21 [缅甸军方动武台湾外交部表关切华航班机今赴仰光载运侨民](/articles/rfi/1034319.md)
-
-2-21 [中国海警舰进入钓鱼岛水域 再欲接近日本渔船](/articles/rfi/1034320.md)
-
-2-21 [香港首现人口负增长 净移出近5万人创历史新高 学者忧政治移民潮加剧问题](/articles/rfi/1034321.md)
 
