--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-26 [美国法庭命令朝鲜向其扣押的美国情报船船员支付巨额赔偿](/articles/voa/1042632.md)
+
+2-26 [约翰逊：英国将就新疆问题追责中国 但不赞成抵制冬奥会](/articles/voa/1042633.md)
+
 2-26 [中国政府否认要求美国外交官接受新冠病毒肛拭子检测](/articles/voa/1042634.md)
 
 2-26 [荷兰议会动议：针对维吾尔人的种族灭绝正在中国发生](/articles/voa/1042635.md)
@@ -596,8 +600,4 @@
 2-15 [习近平最新亲民秀看点何在](/articles/voa/1042930.md)
 
 2-15 [代理12港人案被中国当局停牌 律师卢思位遗憾不能再为当事人在法庭发声](/articles/voa/1042931.md)
-
-2-15 [缅甸一些民众不顾军方镇压继续示威 多国大使联合声明要军方克制](/articles/voa/1042932.md)
-
-2-15 [拜登将在星期五的七国集团会议上讨论疫情、经济和中国问题](/articles/voa/1042933.md)
 
