--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-26 [印度与巴基斯坦在克什米尔印巴控制线沿线停火](/articles/rfi/1034011.md)
+
+2-26 [新冠疫情下美国西岸两大港口工人开工率不足，上百艘货轮停泊海上无法进港](/articles/rfi/1034012.md)
+
 2-26 [拔起新疆种族灭绝的“萝卜” 带出抵制北京冬奥会的“泥 ” - 要闻分析](/articles/rfi/1034013.md)
 
 2-26 [荷兰国会通过动议　称中国在新疆进行“种族灭绝”](/articles/rfi/1034014.md)
@@ -596,8 +600,4 @@
 2-21 [「你想被叫珍妮还是珍妮佛？」大（土反）直美为口误道歉 – 法国国际广播电台 - RFI](/articles/rfi/1034309.md)
 
 2-21 [科技防疫守护职场健康 如何兼顾隐私受关注 – 法国国际广播电台 - RFI](/articles/rfi/1034310.md)
-
-2-21 [加入斯坦福大学胡佛研究所后，博明介绍抗疫经验教训](/articles/rfi/1034311.md)
-
-2-21 [乔科维奇击败梅迪维夫  缔造澳网9度封王纪录 – 法国国际广播电台 - RFI](/articles/rfi/1034312.md)
 
