--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-26 [国际货币基金组织：数字时代公共货币与私人货币可以共存 - 今日经济](/articles/rfi/1034010.md)
+
 2-26 [印度与巴基斯坦在克什米尔印巴控制线沿线停火](/articles/rfi/1034011.md)
 
 2-26 [新冠疫情下美国西岸两大港口工人开工率不足，上百艘货轮停泊海上无法进港](/articles/rfi/1034012.md)
@@ -598,6 +600,4 @@
 2-21 [被指用中国技术和服务器 翻墙到这里聊天当心隔墙有耳](/articles/rfi/1034308.md)
 
 2-21 [「你想被叫珍妮还是珍妮佛？」大（土反）直美为口误道歉 – 法国国际广播电台 - RFI](/articles/rfi/1034309.md)
-
-2-21 [科技防疫守护职场健康 如何兼顾隐私受关注 – 法国国际广播电台 - RFI](/articles/rfi/1034310.md)
 
