--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+2-26 [美国企业购买比特币的真正动机](/articles/ft/1045986.md)
+
+2-26 [苏宁拟出售15亿美元股份来巩固财务状况](/articles/ft/1045987.md)
+
 2-25 [价值投资者如何在牛市中生存？](/articles/ft/1045988.md)
 
 2-25 [正当行为规则和法律正当程序](/articles/ft/1045989.md)
@@ -596,8 +600,4 @@
 1-14 [“阻断法”：中国政府开始设计对美“优势抵消战略”](/articles/ft/1046284.md)
 
 1-14 [制药业对延长新冠疫苗接种时间间隔发出警告](/articles/ft/1046285.md)
-
-1-14 [法国政府不赞成加拿大企业收购家乐福](/articles/ft/1046286.md)
-
-1-14 [美国研究人员称发现两种新冠病毒新变种](/articles/ft/1046287.md)
 
