--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-26 [受国债动荡拖累 纳斯达克指数下挫3.5%](/articles/ft/1045985.md)
+
 2-26 [美国企业购买比特币的真正动机](/articles/ft/1045986.md)
 
 2-26 [苏宁拟出售15亿美元股份来巩固财务状况](/articles/ft/1045987.md)
@@ -598,6 +600,4 @@
 1-14 [每周时事分析：关于朝鲜劳动党八大后对外政策的几个问题](/articles/ft/1046283.md)
 
 1-14 [“阻断法”：中国政府开始设计对美“优势抵消战略”](/articles/ft/1046284.md)
-
-1-14 [制药业对延长新冠疫苗接种时间间隔发出警告](/articles/ft/1046285.md)
 
