--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+2-26 [多位共和党参议员推出法案 拟终止给予中国公民十年多次入境签证](/articles/voa/1042620.md)
+
+2-26 [美国常驻联合国代表带着积极的信息抵达联合国](/articles/voa/1042621.md)
+
+2-26 [拜登建议提高最低工资标准 民众看法不一](/articles/voa/1042622.md)
+
+2-26 [美报告促拜登与台湾谈判双边贸易协定解决市场准入障碍](/articles/voa/1042623.md)
+
+2-26 [香港周五实施市民新冠疫苗接种计划](/articles/voa/1042624.md)
+
 2-26 [美国已接种5千万次新冠疫苗](/articles/voa/1042625.md)
 
 2-26 [VOA连线(张蓉湘): 美国国务院致力于多元化和包容性](/articles/voa/1042626.md)
@@ -590,14 +600,4 @@
 2-16 [蓬佩奥将与奥布莱恩联手 主持论坛聚焦美中关系](/articles/voa/1042918.md)
 
 2-16 [高压面前永不退缩，俄民众改变方式继续抗议](/articles/voa/1042919.md)
-
-2-16 [澳大利亚总理：“一带一路”对澳大利亚没有任何好处](/articles/voa/1042920.md)
-
-2-16 [时事大家谈: 世卫武汉调查疑云再起，中国拒查原始数据？](/articles/voa/1042921.md)
-
-2-16 [58国签署宣言 反对任意拘押外国人](/articles/voa/1042922.md)
-
-2-16 [美联社：中国扩大在西方社媒影响力 散布有关新冠疫情虚假信息](/articles/voa/1042923.md)
-
-2-16 [世卫专家组：新冠病毒在武汉爆发前的传播范围比之前想象的更广泛](/articles/voa/1042924.md)
 
