--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-26 [美股重挫 东京股市日经指数跌幅逾3% – 法国国际广播电台 - RFI](/articles/rfi/1034006.md)
+
+2-26 [华尔街股市遇乱流 日股开盘重挫 – 法国国际广播电台 - RFI](/articles/rfi/1034007.md)
+
 2-26 [为确保好空气，北京冬奥推出区域联控](/articles/rfi/1034008.md)
 
 2-26 [离北京冬奥会开幕日不到一年，其组织条件仍让人存疑 - 法国世界报](/articles/rfi/1034009.md)
@@ -596,8 +600,4 @@
 2-21 [缅甸军方镇压的首位受害者下葬 成千上万人向她致意](/articles/rfi/1034304.md)
 
 2-21 [河内会晤后，特朗普曾提议让金正恩搭空军一号回国](/articles/rfi/1034305.md)
-
-2-21 [厄瓜多总统大选第二轮投票 候选人出炉 – 法国国际广播电台 - RFI](/articles/rfi/1034306.md)
-
-2-21 [全球逾1亿1105万例确诊染疫 246万多人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1034307.md)
 
