--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+2-26 [蔚来汽车会成为汽车行业的未来吗？](/articles/nyt/1047146.md)
+
+2-26 [简报：中国再批两种新冠疫苗注册申请；脸书封禁缅甸军方](/articles/nyt/1047147.md)
+
 2-25 [中国全职太太离婚获5万元补偿引热议](/articles/nyt/1047148.md)
 
 2-25 [对华经济战初步攻势？拜登签署行政令加强供应链](/articles/nyt/1047149.md)
@@ -596,8 +600,4 @@
 12-11 [阿斯图里亚斯，西班牙的“自然天堂”](/articles/nyt/1047444.md)
 
 12-11 [黎智英被加控勾结外国势力危害国家安全罪](/articles/nyt/1047445.md)
-
-12-11 [值得我们一读再读的好书](/articles/nyt/1047446.md)
-
-12-11 [中国驻美使馆转特朗普不实推文，随后称帐号被黑](/articles/nyt/1047447.md)
 
