--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-26 [美军空袭叙利亚境内伊朗支持的民兵设施](/articles/voa/1042618.md)
+
 2-26 [香港从接收难民到输出难民，华人政党请求美国优先庇护港人](/articles/voa/1042619.md)
 
 2-26 [多位共和党参议员推出法案 拟终止给予中国公民十年多次入境签证](/articles/voa/1042620.md)
@@ -598,6 +600,4 @@
 2-16 [布林肯国务卿就58国签署《反对国与国关系中任意拘押宣言》发表视频讲话(全文翻译)](/articles/voa/1042916.md)
 
 2-16 [日本抗议中国海警船进入尖阁诸岛附近海域并成立对策室](/articles/voa/1042917.md)
-
-2-16 [蓬佩奥将与奥布莱恩联手 主持论坛聚焦美中关系](/articles/voa/1042918.md)
 
