--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-26 [FT社评：挽救伊核协议的短暂窗口期](/articles/ft/1045982.md)
+
 2-26 [大选之后重新审视中美大棋局（下）](/articles/ft/1045983.md)
 
 2-26 [陈世英：从珠宝学徒到当代艺术家](/articles/ft/1045984.md)
@@ -598,6 +600,4 @@
 1-15 [医疗和科技企业携手开发“疫苗接种护照”](/articles/ft/1046280.md)
 
 1-14 [12月中国贸易顺差780亿美元，创单月新高](/articles/ft/1046281.md)
-
-1-14 [旷视科技和联想拟发行CDR在科创板上市](/articles/ft/1046282.md)
 
