--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-26 [香港电台检讨出炉：寒冬下公共广播之死？](/articles/dw/1043699.md)
+
 2-26 [荷兰国会通过动议  认定新疆维吾尔遭「种族灭绝」](/articles/dw/1043700.md)
 
 2-26 [美凖贸易代表戴琪出席听证 誓言让北京履行承诺](/articles/dw/1043701.md)
@@ -598,6 +600,4 @@
 2-9 [去年中国生育率大幅下降](/articles/dw/1043997.md)
 
 2-9 [疫情重创：德国出口呈11年来最大降幅](/articles/dw/1043998.md)
-
-2-9 [变革中的男人:“老白男”抑或“都市潮男”?](/articles/dw/1043999.md)
 
