--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-26 [五角大厦：美国空袭叙利亚亲伊朗民兵设施 – 法国国际广播电台 - RFI](/articles/rfi/1034005.md)
+
 2-26 [美股重挫 东京股市日经指数跌幅逾3% – 法国国际广播电台 - RFI](/articles/rfi/1034006.md)
 
 2-26 [华尔街股市遇乱流 日股开盘重挫 – 法国国际广播电台 - RFI](/articles/rfi/1034007.md)
@@ -598,6 +600,4 @@
 2-21 [大直美更成熟 不再怕当新世代选手榜样 – 法国国际广播电台 - RFI](/articles/rfi/1034303.md)
 
 2-21 [缅甸军方镇压的首位受害者下葬 成千上万人向她致意](/articles/rfi/1034304.md)
-
-2-21 [河内会晤后，特朗普曾提议让金正恩搭空军一号回国](/articles/rfi/1034305.md)
 
