--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-26 [字节跳动同意付9200万美元和解隐私索赔](/articles/dw/1043698.md)
+
 2-26 [香港电台检讨出炉：寒冬下公共广播之死？](/articles/dw/1043699.md)
 
 2-26 [荷兰国会通过动议  认定新疆维吾尔遭「种族灭绝」](/articles/dw/1043700.md)
@@ -598,6 +600,4 @@
 2-9 [一年来首次出镜 任正非：信心更大](/articles/dw/1043996.md)
 
 2-9 [去年中国生育率大幅下降](/articles/dw/1043997.md)
-
-2-9 [疫情重创：德国出口呈11年来最大降幅](/articles/dw/1043998.md)
 
