--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-26 [【CDT敏感词周报】第十三期：诋毁解放军、上网追逃、玛丽莲梦六、加拿大国会](/articles/cdt/385561.md)
+
 2-26 [3号厅检票员工 | 同性恋，不是病](/articles/cdt/385562.md)
 
 2-25 [德国之声｜为逼海外家人噤声 中国二度关押新疆维族女子](/articles/cdt/385566.md)
@@ -598,6 +600,4 @@
 1-25 [残障姐妹BEST |转载X“无障碍杀人”事件发生前，我们可以是吹哨者吗？](/articles/cdt/386638.md)
 
 1-24 [骚客文艺 | 张3丰：丧家犬没有乡愁](/articles/cdt/386639.md)
-
-1-24 [中式说法 | 通化被隔离的居民饿着肚皮呼唤方方归来！](/articles/cdt/386640.md)
 
