--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-26 [韩国：朝鲜可能出现人道主义危机](/articles/ft/1045980.md)
+
 2-26 [Twitter将推出“超级关注”等新功能](/articles/ft/1045981.md)
 
 2-26 [FT社评：挽救伊核协议的短暂窗口期](/articles/ft/1045982.md)
@@ -598,6 +600,4 @@
 1-15 [“秃鹫”藏家：诺顿•西蒙和他的博物馆](/articles/ft/1046278.md)
 
 1-15 [人事更替：朝鲜劳动党八大的新意、乱象与隐患](/articles/ft/1046279.md)
-
-1-15 [医疗和科技企业携手开发“疫苗接种护照”](/articles/ft/1046280.md)
 
