--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-26 [亚美尼亚动荡数万人上街示威 欧美俄吁各方克制 – 法国国际广播电台 - RFI](/articles/rfi/1034001.md)
+
+2-26 [美警告亚美尼亚军方 不要干预政治 – 法国国际广播电台 - RFI](/articles/rfi/1034002.md)
+
+2-26 [亚美尼亚政治危机 总理遭军方逼宫 – 法国国际广播电台 - RFI](/articles/rfi/1034003.md)
+
+2-26 [美贸易代表提名人戴琪：要终结波音空巴补贴争议 – 法国国际广播电台 - RFI](/articles/rfi/1034004.md)
+
 2-26 [五角大厦：美国空袭叙利亚亲伊朗民兵设施 – 法国国际广播电台 - RFI](/articles/rfi/1034005.md)
 
 2-26 [美股重挫 东京股市日经指数跌幅逾3% – 法国国际广播电台 - RFI](/articles/rfi/1034006.md)
@@ -592,12 +600,4 @@
 2-22 [伊朗核问题：德黑兰考虑欧洲的提议](/articles/rfi/1034299.md)
 
 2-22 [国际原子能总署署长访问伊朗 – 法国国际广播电台 - RFI](/articles/rfi/1034300.md)
-
-2-21 [尼日尔2021总统大选具有历史性意义](/articles/rfi/1034301.md)
-
-2-21 [缅甸军方对民施暴 联合国秘书长：不可接受](/articles/rfi/1034302.md)
-
-2-21 [大直美更成熟 不再怕当新世代选手榜样 – 法国国际广播电台 - RFI](/articles/rfi/1034303.md)
-
-2-21 [缅甸军方镇压的首位受害者下葬 成千上万人向她致意](/articles/rfi/1034304.md)
 
