--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-26 [从语言开始，拜登政府对特朗普“拨乱反正”](/articles/nyt/1047144.md)
+
 2-26 [大熊猫真的是其他野生动物的“保护伞”吗？](/articles/nyt/1047145.md)
 
 2-26 [蔚来汽车会成为汽车行业的未来吗？](/articles/nyt/1047146.md)
@@ -598,6 +600,4 @@
 12-11 [拜登之子接受美司法部税务调查](/articles/nyt/1047442.md)
 
 12-11 [如何跟孩子谈论色情片？](/articles/nyt/1047443.md)
-
-12-11 [阿斯图里亚斯，西班牙的“自然天堂”](/articles/nyt/1047444.md)
 
