--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-26 [美国对伊朗支持的叙利亚民兵组织设施实施空袭](/articles/voa/1042616.md)
+
 2-26 [美国记者眼中的中国：中国人过分自信、甚至有些自大](/articles/voa/1042617.md)
 
 2-26 [美军空袭叙利亚境内伊朗支持的民兵设施](/articles/voa/1042618.md)
@@ -598,6 +600,4 @@
 2-16 [白宫要义: 拜登在总统日呼吁团结应对新冠疫情，将联合G7盟友对抗中国](/articles/voa/1042914.md)
 
 2-16 [拜登总统议程面临参院拖延议事考验](/articles/voa/1042915.md)
-
-2-16 [布林肯国务卿就58国签署《反对国与国关系中任意拘押宣言》发表视频讲话(全文翻译)](/articles/voa/1042916.md)
 
