--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-26 [以色列捐赠疫苗惹议 冻结计画待司法机关检视 – 法国国际广播电台 - RFI](/articles/rfi/1033999.md)
+
+2-26 [拜登上任首度与沙国国王通话 重申人权重要性 – 法国国际广播电台 - RFI](/articles/rfi/1034000.md)
+
 2-26 [亚美尼亚动荡数万人上街示威 欧美俄吁各方克制 – 法国国际广播电台 - RFI](/articles/rfi/1034001.md)
 
 2-26 [美警告亚美尼亚军方 不要干预政治 – 法国国际广播电台 - RFI](/articles/rfi/1034002.md)
@@ -596,8 +600,4 @@
 2-22 [IS还魂？巴格达以北一空军基地遭炮击](/articles/rfi/1034297.md)
 
 2-22 [美国白宫首席防疫顾问福奇:对病毒起源调查必须有力而且清晰](/articles/rfi/1034298.md)
-
-2-22 [伊朗核问题：德黑兰考虑欧洲的提议](/articles/rfi/1034299.md)
-
-2-22 [国际原子能总署署长访问伊朗 – 法国国际广播电台 - RFI](/articles/rfi/1034300.md)
 
