--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-26 [国企收购苏宁易购百亿股权    民企国有化趋势不可逆转](/articles/rfa/1046284.md)
+
 2-26 [美众院外委会通过法案和决议案  抵制北京奥运 关注香港](/articles/rfa/1046285.md)
 
 2-26 [离婚获5万元赔偿  “全职太太”引爆舆论](/articles/rfa/1046286.md)
@@ -598,6 +600,4 @@
 1-27 [达赖喇嘛：军事威吓已过时 以微笑和平共存](/articles/rfa/1046582.md)
 
 1-27 [中国经济前景未明    权威学者为永久取消GDP指标造势](/articles/rfa/1046583.md)
-
-1-27 [官方宣称物价“温和上涨”     基层反映粮价早已翻倍](/articles/rfa/1046584.md)
 
