--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-26 [美国空袭叙利亚境内伊朗支持的民兵组织](/articles/ft/1045978.md)
+
 2-26 [拜登审查关键供应链意味着什么？](/articles/ft/1045979.md)
 
 2-26 [韩国：朝鲜可能出现人道主义危机](/articles/ft/1045980.md)
@@ -598,6 +600,4 @@
 1-15 [美联储主席：未考虑“退出”宽松政策](/articles/ft/1046276.md)
 
 1-15 [拜登推出1.9万亿美元刺激计划](/articles/ft/1046277.md)
-
-1-15 [“秃鹫”藏家：诺顿•西蒙和他的博物馆](/articles/ft/1046278.md)
 
