--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-26 [美国拉拢台湾巩固供应链 台积电扮演关键战略角色](/articles/rfa/1046281.md)
+
+2-26 [又见中国资讯战 台湾国安局成谣言攻击对象](/articles/rfa/1046282.md)
+
+2-26 [国际社会围堵中国   北京打压香港民主派作测试](/articles/rfa/1046283.md)
+
 2-26 [国企收购苏宁易购百亿股权    民企国有化趋势不可逆转](/articles/rfa/1046284.md)
 
 2-26 [美众院外委会通过法案和决议案  抵制北京奥运 关注香港](/articles/rfa/1046285.md)
@@ -594,10 +600,4 @@
 1-28 [反驳习近平言论：德国总理指多边主义要透明合作  澳大利亚财长称中国言行不一](/articles/rfa/1046579.md)
 
 1-27 [全球车用电子芯片缺货 台湾召集厂商提高产能优先供货](/articles/rfa/1046580.md)
-
-1-27 [蔡英文为抗疫喊话 陈时中冷回国台办批评](/articles/rfa/1046581.md)
-
-1-27 [达赖喇嘛：军事威吓已过时 以微笑和平共存](/articles/rfa/1046582.md)
-
-1-27 [中国经济前景未明    权威学者为永久取消GDP指标造势](/articles/rfa/1046583.md)
 
