--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-26 [拜登首轮军事行动空袭叙利亚境内设施](/articles/dw/1043694.md)
+
+2-26 [中美台政治漩涡中“躺枪”的它们](/articles/dw/1043695.md)
+
+2-26 [港府推“安心出行”APP  港人为何不安心](/articles/dw/1043696.md)
+
 2-26 [专访：各国应善用联合国机制对抗中国势力](/articles/dw/1043697.md)
 
 2-26 [字节跳动同意付9200万美元和解隐私索赔](/articles/dw/1043698.md)
@@ -594,10 +600,4 @@
 2-9 [美两艘航母在南中国海联合演练](/articles/dw/1043992.md)
 
 2-9 [缅甸军方承诺选举 警方动用橡皮子弹](/articles/dw/1043993.md)
-
-2-9 [肯尼亚: 中国烙印无处不在](/articles/dw/1043994.md)
-
-2-9 [被迫关门? 疫情之下德国零售业积极自救](/articles/dw/1043995.md)
-
-2-9 [一年来首次出镜 任正非：信心更大](/articles/dw/1043996.md)
 
