--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-26 [香港中大与学生会划清界限  学生会指校方打压](/articles/dw/1043693.md)
+
 2-26 [拜登首轮军事行动空袭叙利亚境内设施](/articles/dw/1043694.md)
 
 2-26 [中美台政治漩涡中“躺枪”的它们](/articles/dw/1043695.md)
@@ -598,6 +600,4 @@
 2-9 [世卫专家：新冠很可能从动物通过宿主再传人](/articles/dw/1043991.md)
 
 2-9 [美两艘航母在南中国海联合演练](/articles/dw/1043992.md)
-
-2-9 [缅甸军方承诺选举 警方动用橡皮子弹](/articles/dw/1043993.md)
 
