--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-26 [缅甸警察袭击抗议者](/articles/voa/1042614.md)
+
 2-26 [路透社：华为或于今年推出数款电动汽车](/articles/voa/1042615.md)
 
 2-26 [美国对伊朗支持的叙利亚民兵组织设施实施空袭](/articles/voa/1042616.md)
@@ -598,6 +600,4 @@
 2-16 [记录当代中国文字狱，为“墙国”不再有因言获罪那一天](/articles/voa/1042912.md)
 
 2-16 [后特朗普时代共和民主两党面临不同挑战](/articles/voa/1042913.md)
-
-2-16 [白宫要义: 拜登在总统日呼吁团结应对新冠疫情，将联合G7盟友对抗中国](/articles/voa/1042914.md)
 
