--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-26 [潮池 | 香港電台檢討報告沒有告訴你的十件事](/articles/cdt/385505.md)
+
 2-26 [【立此存照】四川一高校教师在网络发表不当言论，已停职接受调查](/articles/cdt/385509.md)
 
 2-26 [端传媒 | 专访有线中国组：三代记者，十九载悲喜，一种失落的情怀（节选）](/articles/cdt/385511.md)
@@ -598,6 +600,4 @@
 1-25 [清醒派｜40万人口的东北城市确诊200+，紧急封城面临断粮，能给个热搜吗](/articles/cdt/386604.md)
 
 1-25 [澎湃新闻｜走不出的网络暴力：一个抗癌女孩最后的311天](/articles/cdt/386610.md)
-
-1-25 [【立此存照】王箐丰（笔名元淦恭）被构陷入罪网上求关注](/articles/cdt/386618.md)
 
