--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-26 [“拉大旗当虎皮”的非法社会组织为何在中国屡禁不止？](/articles/voa/1042613.md)
+
 2-26 [缅甸警察袭击抗议者](/articles/voa/1042614.md)
 
 2-26 [路透社：华为或于今年推出数款电动汽车](/articles/voa/1042615.md)
@@ -598,6 +600,4 @@
 2-16 [弹劾审判引发对国内恐怖主义的重新审视](/articles/voa/1042911.md)
 
 2-16 [记录当代中国文字狱，为“墙国”不再有因言获罪那一天](/articles/voa/1042912.md)
-
-2-16 [后特朗普时代共和民主两党面临不同挑战](/articles/voa/1042913.md)
 
