--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-26 [中印外长通话 同意建热线  印媒怎么报？](/articles/rfi/1033977.md)
+
+2-26 [俄监狱当局首长：纳瓦尼已转送流放地服刑 – 法国国际广播电台 - RFI](/articles/rfi/1033978.md)
+
+2-26 [通膨升息忧虑笼罩 亚股追随美股大失血 – 法国国际广播电台 - RFI](/articles/rfi/1033979.md)
+
+2-26 [十字架报：从司法层面打击中国强迫劳动问题 - 法国报纸摘要](/articles/rfi/1033980.md)
+
 2-26 [美国共和党参院领袖麦康奈尔称 2024大选仍願挺特朗普](/articles/rfi/1033981.md)
 
 2-26 [马克龙与习近平通话未提维吾尔人问题引发批评](/articles/rfi/1033982.md)
@@ -592,12 +600,4 @@
 2-22 [小学年年六四祈祷忧犯国安犹豫取消](/articles/rfi/1034275.md)
 
 2-22 [公务员宣誓下怀疑造成大量人才流失](/articles/rfi/1034276.md)
-
-2-22 [两会快来了 北京启动严维稳](/articles/rfi/1034277.md)
-
-2-22 [纽西兰送别角 又见大批鲸鱼搁浅 – 法国国际广播电台 - RFI](/articles/rfi/1034278.md)
-
-2-22 [德国COVID-19确诊再增 卫生部长敦促提高警觉 – 法国国际广播电台 - RFI](/articles/rfi/1034279.md)
-
-2-22 [缅甸军政府祭死亡威胁 抗议仍不止 – 法国国际广播电台 - RFI](/articles/rfi/1034280.md)
 
