--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-27 [联合国人权高官批评北京以国安和抗疫名义限制公民权利和政治自由](/articles/voa/1042609.md)
+
 2-26 [克里米亚被俄占领七周年，美国欧盟重申克里米亚属于乌克兰](/articles/voa/1042610.md)
 
 2-26 [中国海关宣布暂停台湾菠萝输入 台湾总统蔡英文表示谴责](/articles/voa/1042611.md)
@@ -598,6 +600,4 @@
 2-16 [世贸组织选出首位女性和首位非洲人担任总干事](/articles/voa/1042907.md)
 
 2-16 [“在中国办奥运是不道德的” 共和党众议员吁抵制北京冬奥](/articles/voa/1042908.md)
-
-2-16 [高中生经营慈善商店学习人生重要课程](/articles/voa/1042909.md)
 
