--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-27 [欧洲第一国  荷兰国会认定新疆维吾尔遭种族灭绝](/articles/rfa/1046276.md)
+
+2-27 [抖音海外版涉侵犯美用户隐私   认赔9200万美元](/articles/rfa/1046277.md)
+
 2-27 [港版国安法魔掌伸进大学校园   学生组织遭全方位打压](/articles/rfa/1046278.md)
 
 2-26 [中国突禁台湾凤梨进口  又一个政治的牺牲品？](/articles/rfa/1046279.md)
@@ -596,8 +600,4 @@
 1-28 [拜登对中国不松手 习近平急了？](/articles/rfa/1046574.md)
 
 1-28 [中国国药集团牵头 传将中国中药私有化](/articles/rfa/1046575.md)
-
-1-28 [北京小汤山强拆：小区全毁 母子寒冬露宿街头](/articles/rfa/1046576.md)
-
-1-28 [加中去年合作疫苗   中国表面称好却暗自阻挠](/articles/rfa/1046577.md)
 
