--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-27 [美国将解密沙特记者卡舒吉遇害报告](/articles/rfi/1033966.md)
+
 2-27 [疫情：法国20省强化监控 总理吁巴黎市别出馊主意](/articles/rfi/1033967.md)
 
 2-27 [法媒呼吁法国足球明星杯葛卡塔尔世界杯](/articles/rfi/1033968.md)
@@ -598,6 +600,4 @@
 2-22 [移民加拿大已8年为了拯救港人Aileen出尽法宝](/articles/rfi/1034264.md)
 
 2-22 [余茂春有新就](/articles/rfi/1034265.md)
-
-2-22 [忧政策收紧 中国股市今大跌](/articles/rfi/1034266.md)
 
