--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-27 [“反革命”罪名重现  北京两名维权人士被以毛时代文件取消养老待遇](/articles/rfa/1046274.md)
+
+2-27 [加拿大国会报告：支持香港自治  防堵中国威胁](/articles/rfa/1046275.md)
+
 2-27 [欧洲第一国  荷兰国会认定新疆维吾尔遭种族灭绝](/articles/rfa/1046276.md)
 
 2-27 [抖音海外版涉侵犯美用户隐私   认赔9200万美元](/articles/rfa/1046277.md)
@@ -596,8 +600,4 @@
 1-28 [专家：需要采取综合手段反对新疆强迫劳动](/articles/rfa/1046572.md)
 
 1-28 [美中科技竞争“倾斜”？谷歌前总裁建议采取措施应对中国挑战](/articles/rfa/1046573.md)
-
-1-28 [拜登对中国不松手 习近平急了？](/articles/rfa/1046574.md)
-
-1-28 [中国国药集团牵头 传将中国中药私有化](/articles/rfa/1046575.md)
 
