--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-27 [华尔街日报：拜登政府将继续特朗普时代针对中国技术公司的规定](/articles/voa/1042602.md)
+
 2-27 [美国公布解密情报报告 点明沙特王储批准杀害记者卡舒吉](/articles/voa/1042603.md)
 
 2-27 [香港各界批政府对港台检讨报告不公 忧消灭编辑自主变官方“喉舌”](/articles/voa/1042604.md)
@@ -598,6 +600,4 @@
 2-17 [台湾出生的宇航员获选执行NASA2022年太空任务](/articles/voa/1042900.md)
 
 2-17 [缅甸当局秘密庭审昂山素季 大规模民众抗议继续](/articles/voa/1042901.md)
-
-2-16 [美联储官员：美国经济复苏动力强劲，可能会强于中国](/articles/voa/1042902.md)
 
