--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-27 [美国解密报告指沙特王储批准杀害卡舒吉  美国宣布制裁沙特前高官及行动小组](/articles/rfi/1033961.md)
+
+2-27 [法国表示支持美国在叙利亚的空袭行动](/articles/rfi/1033962.md)
+
+2-27 [尼日利亚300多名女学生遭绑架 联合国强烈谴责](/articles/rfi/1033963.md)
+
+2-27 [旅法学者刘学伟：新冠病毒精准地击中了西方文化的诸般弱点 - 公民论坛](/articles/rfi/1033964.md)
+
 2-27 [厄立特里亚军队在阿克苏姆大屠杀？](/articles/rfi/1033965.md)
 
 2-27 [美国将解密沙特记者卡舒吉遇害报告](/articles/rfi/1033966.md)
@@ -592,12 +600,4 @@
 2-22 [欧盟外长开会 料对俄罗斯缅甸镇压行动祭制裁 – 法国国际广播电台 - RFI](/articles/rfi/1034259.md)
 
 2-22 [经济复苏利多不敌通膨疑虑 亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1034260.md)
-
-2-22 [缅甸民众静坐示威继续挑战军政府 - 法国报纸摘要](/articles/rfi/1034261.md)
-
-2-22 [波音777丹佛上空起火 全球各地有紧急停飞](/articles/rfi/1034262.md)
-
-2-22 [美军频扰南海之际台湾强化太平岛防务工程26日开标](/articles/rfi/1034263.md)
-
-2-22 [移民加拿大已8年为了拯救港人Aileen出尽法宝](/articles/rfi/1034264.md)
 
