--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-27 [《无依之地》：来自北京的华人导演讲述美国边缘群体的故事](/articles/voa/1042600.md)
+
+2-27 [拜登的对华贸易难题：“减少依赖”还是“自由贸易”](/articles/voa/1042601.md)
+
 2-27 [华尔街日报：拜登政府将继续特朗普时代针对中国技术公司的规定](/articles/voa/1042602.md)
 
 2-27 [美国公布解密情报报告 点明沙特王储批准杀害记者卡舒吉](/articles/voa/1042603.md)
@@ -596,8 +600,4 @@
 2-17 [李柱铭黎智英等9名香港民主派人士 涉反送中运动未经批准集结开审](/articles/voa/1042898.md)
 
 2-17 [韩国情报：朝鲜黑客试图盗窃辉瑞疫苗数据](/articles/voa/1042899.md)
-
-2-17 [台湾出生的宇航员获选执行NASA2022年太空任务](/articles/voa/1042900.md)
-
-2-17 [缅甸当局秘密庭审昂山素季 大规模民众抗议继续](/articles/voa/1042901.md)
 
