--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-27 [沈大伟：美国应与中国争夺东南亚](/articles/rfa/1046270.md)
+
 2-27 [美前国防防长: 台海局势非常危险](/articles/rfa/1046271.md)
 
 2-27 [新疆大门是敞开的？UN和欧盟欲去调查受阻](/articles/rfa/1046272.md)
@@ -598,6 +600,4 @@
 1-28 [又一律师遭吊照   袭祥栋公开为当事人发声被指违反律师法](/articles/rfa/1046568.md)
 
 1-28 [两岸为猪肉互怼  中要禁台湾猪 台呛：这话应倒过来说](/articles/rfa/1046569.md)
-
-1-28 [拜登政府将暂停部分军售 台湾：台不在名单内](/articles/rfa/1046570.md)
 
