--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-27 [拜登访问德克萨斯 察看冬季风暴灾情](/articles/voa/1042595.md)
+
 2-27 [民主党议员希望拜登总统放弃下令发射核武器的专有权力](/articles/voa/1042596.md)
 
 2-27 [联合国专家敦促美国对警察暴力和系统性的种族主义进行深远改革](/articles/voa/1042597.md)
@@ -598,6 +600,4 @@
 2-17 [中国称对其有“完全信心” 专家：世贸组织新领导人恐难堪重任](/articles/voa/1042893.md)
 
 2-17 [时事大家谈: 新闻机构—中国与西方价值观对抗的新战场？](/articles/voa/1042894.md)
-
-2-17 [中国企图拉拢欧洲国家瓦解美国抗中联盟](/articles/voa/1042895.md)
 
