--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-27 [美「哈绍吉禁令」制裁76人 独缺沙乌地王储 – 法国国际广播电台 - RFI](/articles/rfi/1033947.md)
+
+2-27 [美国宣布「哈绍吉禁令」 制裁76沙乌地人 – 法国国际广播电台 - RFI](/articles/rfi/1033948.md)
+
 2-27 [以色列货船阿曼湾爆炸 无船员伤亡 – 法国国际广播电台 - RFI](/articles/rfi/1033949.md)
 
 2-27 [专家小组赞成推荐  娇生疫苗可望获美FDA紧急授权 – 法国国际广播电台 - RFI](/articles/rfi/1033950.md)
@@ -596,8 +600,4 @@
 2-22 [杨勇： 青藏高原的水利建设必须考虑气候变化的因素 - 环境与发展](/articles/rfi/1034245.md)
 
 2-22 [缅甸民众无视军方警告，投身规模空前的抗争运动](/articles/rfi/1034246.md)
-
-2-22 [中印边境恶斗受伤团长露面 多地质疑解放军死伤数网民获诋毁英雄罪遭拘](/articles/rfi/1034247.md)
-
-2-22 [美媒称新证据显示发现首个确诊病例前 新冠病毒可能已在中国传播](/articles/rfi/1034248.md)
 
