--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-27 [全球军费创新高： 美国遥遥领先 中国增幅最快](/articles/dw/1043684.md)
+
 2-27 [荷兰国会通过动议:新疆维吾尔人遭“种族灭绝“](/articles/dw/1043685.md)
 
 2-26 [中国外交部：荷兰涉疆动议蓄意污蔑抹黑中国](/articles/dw/1043686.md)
@@ -598,6 +600,4 @@
 2-10 [专访：憧憬未来 贺岁“牛年”](/articles/dw/1043982.md)
 
 2-10 [缅甸反政变示威持续 军政府实施宵禁](/articles/dw/1043983.md)
-
-2-10 [中国考虑和中东欧国家进行疫苗合作](/articles/dw/1043984.md)
 
