--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-27 [缅甸警察出动制止抗议 特使呼吁联合国干预政变](/articles/voa/1042589.md)
+
+2-27 [纽约证交所开始启动中海油除牌](/articles/voa/1042590.md)
+
 2-27 [专访美国务院官员：拜登政府放眼重建美欧关系反制中国侵犯人权](/articles/voa/1042591.md)
 
 2-27 [学者称国际战略环境有利台湾被纳入美国供应链安全联盟](/articles/voa/1042592.md)
@@ -596,8 +600,4 @@
 2-17 [美国呼吁中国明确表态谴责缅甸政变](/articles/voa/1042887.md)
 
 2-17 [弹劾审判虽落幕 特朗普动向、党派分歧更受关注](/articles/voa/1042888.md)
-
-2-17 [TikTok在美广告业务迅速回升，但在欧洲遭消费者组织投诉](/articles/voa/1042889.md)
-
-2-17 [大选争议尘埃落定？美最高法院周五决定是否受理相关诉讼](/articles/voa/1042890.md)
 
