--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-27 [特朗普剑指中企规定 拜登拟推下月生效](/articles/dw/1043679.md)
+
+2-27 [美国更正“钓鱼台主权支持日本”发言](/articles/dw/1043680.md)
+
+2-27 [研发疫苗功劳大   BioNTech创始人获“联邦十字勋章”](/articles/dw/1043681.md)
+
 2-27 [美方称沙特王储批准杀害卡舒吉 沙特否认](/articles/dw/1043682.md)
 
 2-27 [七张图看一周大事](/articles/dw/1043683.md)
@@ -594,10 +600,4 @@
 2-10 [科比之死：料飞行员失误致巨星陨落](/articles/dw/1043977.md)
 
 2-10 [老照片：20世纪30年代德国掠影](/articles/dw/1043978.md)
-
-2-10 [耿潇男遭判刑3年 恳求对丈夫从轻处罚](/articles/dw/1043979.md)
-
-2-10 [美候任预算局长冀率领盟邦施压北京](/articles/dw/1043980.md)
-
-2-10 [匈牙利唯一独立电台遭禁](/articles/dw/1043981.md)
 
