--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-27 [政协委员担忧中国“花美男”现象 网友批评性别歧视](/articles/voa/1042586.md)
+
+2-27 [美国防部发言人就日前尖阁列岛主权说法致歉，重申美日安保条约承诺绝不动摇](/articles/voa/1042587.md)
+
 2-27 [众议院通过1.9万亿美元新冠病毒疫情纾困法案](/articles/voa/1042588.md)
 
 2-27 [缅甸警察出动制止抗议 特使呼吁联合国干预政变](/articles/voa/1042589.md)
@@ -596,8 +600,4 @@
 2-17 [秘鲁启动新冠疫苗计划 同时调查官员提前接种丑闻](/articles/voa/1042884.md)
 
 2-17 [向海外媒体提供信息的西藏导游在狱中死亡 人权组织呼吁调查](/articles/voa/1042885.md)
-
-2-17 [北约国防部长会议将就中俄威胁进行广泛讨论](/articles/voa/1042886.md)
-
-2-17 [美国呼吁中国明确表态谴责缅甸政变](/articles/voa/1042887.md)
 
