--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-28 [向承美  | 留守儿童的哭喊声, 其实是社会的撕裂声](/articles/cdt/385474.md)
+
+2-27 [思享一角 | “政府安排干部起诉政府”，法律原来可以这么玩？](/articles/cdt/385475.md)
+
 2-27 [誌 | 当结婚成为抵抗极权的方式](/articles/cdt/385484.md)
 
 2-27 [维舟 | 三十年启蒙失败了吗？](/articles/cdt/385485.md)
@@ -596,8 +600,4 @@
 1-26 [声道｜张文宏再会说话，也叫不醒这些人](/articles/cdt/386551.md)
 
 1-26 [集中銷毀｜中国式教育把每个学生都切割得一模一样](/articles/cdt/386561.md)
-
-1-26 [八点健闻 | 通化困局：中国北方疫情何以至此？](/articles/cdt/386563.md)
-
-1-26 [【网络民议】去年今天的“不正确的集体记忆”](/articles/cdt/386579.md)
 
