--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-28 [评论 | 滕彪：声援耿潇男](/articles/cdt/385473.md)
+
 2-28 [向承美  | 留守儿童的哭喊声, 其实是社会的撕裂声](/articles/cdt/385474.md)
 
 2-27 [思享一角 | “政府安排干部起诉政府”，法律原来可以这么玩？](/articles/cdt/385475.md)
@@ -598,6 +600,4 @@
 1-26 [媒联社｜“山东女记者被打”引发同行声援，今天却翻脸说“不慎摔倒”](/articles/cdt/386550.md)
 
 1-26 [声道｜张文宏再会说话，也叫不醒这些人](/articles/cdt/386551.md)
-
-1-26 [集中銷毀｜中国式教育把每个学生都切割得一模一样](/articles/cdt/386561.md)
 
