--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-28 [缅甸警察强力镇压，缅甸联合国大使激情演讲誓言效忠民选政府](/articles/voa/1042583.md)
+
 2-28 [俄中走近 为何谍影重重谍案不断？](/articles/voa/1042584.md)
 
 2-28 [尼日利亚27名学生人质获释，300多名被绑架的女生下落尚未确定](/articles/voa/1042585.md)
@@ -598,6 +600,4 @@
 2-17 [共和党组织申斥投票支持将特朗普定罪的本党议员](/articles/voa/1042881.md)
 
 2-17 [卫生专家呼吁公平分配全球疫苗](/articles/voa/1042882.md)
-
-2-17 [白宫要义: 拜登总统第一位通话的中东领导人将会是内塔尼亚胡](/articles/voa/1042883.md)
 
