--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-28 [缅甸警方在仰光向示威者发射橡皮子弹](/articles/rfi/1033915.md)
+
+2-28 [海地数百囚犯集体越狱 一名督察殉职](/articles/rfi/1033916.md)
+
+2-28 [拜登1.9万亿疫情救济方案在众院通过](/articles/rfi/1033917.md)
+
 2-28 [Covid-19:科特迪瓦收到首批免费疫苗](/articles/rfi/1033918.md)
 
 2-28 [缅甸周六示威数百人被捕 大使在联大抨击军政府后遭解职 - 要闻解说](/articles/rfi/1033919.md)
@@ -594,10 +600,4 @@
 2-23 [傻瓜庞克发8分钟影片 爆炸性告别粉丝 – 法国国际广播电台 - RFI](/articles/rfi/1034213.md)
 
 2-23 [iPhone 12助攻 苹果第4季销量超车三星 – 法国国际广播电台 - RFI](/articles/rfi/1034214.md)
-
-2-23 [苹果超越三星 登全球智慧手机龙头宝座 – 法国国际广播电台 - RFI](/articles/rfi/1034215.md)
-
-2-23 [拚群体免疫 葡萄牙：应可于夏天达标 – 法国国际广播电台 - RFI](/articles/rfi/1034216.md)
-
-2-23 [歇业近一年  纽约市戏院获准3月恢复营业 – 法国国际广播电台 - RFI](/articles/rfi/1034217.md)
 
