--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-28 [【立此存照】学术会议资讯｜高校老师发表不当言论，已被停职接受警方调查](/articles/cdt/385457.md)
+
 2-28 [【网络民议】“这还不是种族歧视？说白人种族歧视的时候，看看自己吧？”](/articles/cdt/385468.md)
 
 2-28 [评论 | 滕彪：声援耿潇男](/articles/cdt/385473.md)
@@ -598,6 +600,4 @@
 1-27 [黑羊公社｜通化封城背后真的只有懒政和一刀切吗？压力型体制或许才是答案](/articles/cdt/386548.md)
 
 1-26 [人间三角｜第一个给郑爽挡子弹的，居然是百度](/articles/cdt/386549.md)
-
-1-26 [媒联社｜“山东女记者被打”引发同行声援，今天却翻脸说“不慎摔倒”](/articles/cdt/386550.md)
 
