--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-28 [拜登促请参议院尽快通过1.9万亿美元抗疫刺激经济方案](/articles/rfi/1033912.md)
+
+2-28 [缅甸常驻代表因反对军政权被撤职　数百示威者被捕](/articles/rfi/1033913.md)
+
+2-28 [法国新冠入院人数略有下降 尼斯等市周末“封城”](/articles/rfi/1033914.md)
+
 2-28 [缅甸警方在仰光向示威者发射橡皮子弹](/articles/rfi/1033915.md)
 
 2-28 [海地数百囚犯集体越狱 一名督察殉职](/articles/rfi/1033916.md)
@@ -594,10 +600,4 @@
 2-23 [沙尘暴延误运输 几内亚伊波拉疫苗延至23日施打 – 法国国际广播电台 - RFI](/articles/rfi/1034210.md)
 
 2-23 [傻瓜庞克宣告解散  菲董推文致敬 – 法国国际广播电台 - RFI](/articles/rfi/1034211.md)
-
-2-23 [公关证实 傻瓜庞克解散 – 法国国际广播电台 - RFI](/articles/rfi/1034212.md)
-
-2-23 [傻瓜庞克发8分钟影片 爆炸性告别粉丝 – 法国国际广播电台 - RFI](/articles/rfi/1034213.md)
-
-2-23 [iPhone 12助攻 苹果第4季销量超车三星 – 法国国际广播电台 - RFI](/articles/rfi/1034214.md)
 
