--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-28 [美国优先发展超高音速武器，对抗中俄威胁](/articles/voa/1042580.md)
+
 2-28 [拜登总统呼吁参议院通过新冠疫情纾困议案](/articles/voa/1042581.md)
 
 2-28 [北京“两会”前安保升级 严防异议人士强行遣返访民](/articles/voa/1042582.md)
@@ -598,6 +600,4 @@
 2-17 [拜登出访美国腹地争取选民支持经济救助计划](/articles/voa/1042878.md)
 
 2-17 [莫德纳将在5月前提供1亿剂第二批疫苗](/articles/voa/1042879.md)
-
-2-17 [争取联盟对抗中国 拜登本周迎来G7首秀](/articles/voa/1042880.md)
 
