--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-28 [华西村遭挤兑？  “天下第一村”怎么了](/articles/rfi/1033911.md)
+
 2-28 [拜登促请参议院尽快通过1.9万亿美元抗疫刺激经济方案](/articles/rfi/1033912.md)
 
 2-28 [缅甸常驻代表因反对军政权被撤职　数百示威者被捕](/articles/rfi/1033913.md)
@@ -598,6 +600,4 @@
 2-23 [美再出手制裁2缅甸军官 要求恢复民主 – 法国国际广播电台 - RFI](/articles/rfi/1034209.md)
 
 2-23 [沙尘暴延误运输 几内亚伊波拉疫苗延至23日施打 – 法国国际广播电台 - RFI](/articles/rfi/1034210.md)
-
-2-23 [傻瓜庞克宣告解散  菲董推文致敬 – 法国国际广播电台 - RFI](/articles/rfi/1034211.md)
 
