--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-28 [以色列人员抵达希腊，调查海岸焦油污染源](/articles/voa/1042579.md)
+
 2-28 [美国优先发展超高音速武器，对抗中俄威胁](/articles/voa/1042580.md)
 
 2-28 [拜登总统呼吁参议院通过新冠疫情纾困议案](/articles/voa/1042581.md)
@@ -598,6 +600,4 @@
 2-17 [新冠病毒成为2020旅游业杀手](/articles/voa/1042877.md)
 
 2-17 [拜登出访美国腹地争取选民支持经济救助计划](/articles/voa/1042878.md)
-
-2-17 [莫德纳将在5月前提供1亿剂第二批疫苗](/articles/voa/1042879.md)
 
