--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-28 [【网络民议】我喜欢的博主失去了自由，我会永远祝福她。](/articles/cdt/385450.md)
+
+2-28 [端传媒 | Clubhouse“两岸房”三日记：如果没有墙，我们会跟彼此聊什么？（节选）](/articles/cdt/385456.md)
+
 2-28 [【立此存照】学术会议资讯｜高校老师发表不当言论，已被停职接受警方调查](/articles/cdt/385457.md)
 
 2-28 [北同文化 | 西西教科书案：还要酝酿多久才能等来风暴](/articles/cdt/385464.md)
@@ -596,8 +600,4 @@
 1-27 [看新闻 | 中国官员再出狂言：老弱病残孕要往死里打！](/articles/cdt/386538.md)
 
 1-27 [澎湃新闻 | 贵州女子微信群骂社区支书“草包”，被毕节警方跨市铐走行拘](/articles/cdt/386539.md)
-
-1-27 [思维补丁 | “别有用心”的困难群众](/articles/cdt/386540.md)
-
-1-27 [【404文库】大眼哥 |  2021年已到了第27天，你的2020年还没过去。](/articles/cdt/386545.md)
 
