--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-28 [司法部：中国商人企图偷窃通用电气商业秘密](/articles/voa/1042577.md)
+
 2-28 [美国政府批准使用强生公司的新冠疫苗](/articles/voa/1042578.md)
 
 2-28 [以色列人员抵达希腊，调查海岸焦油污染源](/articles/voa/1042579.md)
@@ -598,6 +600,4 @@
 2-17 [美国军舰在“南沙群岛”实施航行自由行动](/articles/voa/1042875.md)
 
 2-17 [拜登：中国将会为其践踏人权行为承担后果](/articles/voa/1042876.md)
-
-2-17 [新冠病毒成为2020旅游业杀手](/articles/voa/1042877.md)
 
