--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-28 [叶门叛军青年运动射飞弹袭利雅德 遭沙国拦截 – 法国国际广播电台 - RFI](/articles/rfi/1033887.md)
+
 2-28 [高雄六龟农会接获陆方来电暂停出口莲雾到大陆台官方称个别行为](/articles/rfi/1033888.md)
 
 2-28 [日本自卫队和海保联合训练剑指中国海警舰](/articles/rfi/1033889.md)
@@ -598,6 +600,4 @@
 2-23 [加拿大国会通过动议确认北京在新疆推行“种族灭绝”](/articles/rfi/1034185.md)
 
 2-23 [接受菅首相长子任职公司款待 总务省11人遭处分](/articles/rfi/1034186.md)
-
-2-23 [回归23年香港五大纪律部队还能够跟英国人那一套吗？](/articles/rfi/1034187.md)
 
