--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-28 [法广 |  香港民主派47人被控“串谋颠覆国家政权罪” 明日提堂](/articles/cdt/385444.md)
+
+2-28 [BBC | 新疆“再教育营”：新文件揭穆斯林如何因蓄须、蒙面和上网被拘留](/articles/cdt/385447.md)
+
 2-28 [【网络民议】我喜欢的博主失去了自由，我会永远祝福她。](/articles/cdt/385450.md)
 
 2-28 [端传媒 | Clubhouse“两岸房”三日记：如果没有墙，我们会跟彼此聊什么？（节选）](/articles/cdt/385456.md)
@@ -596,8 +600,4 @@
 1-27 [【图说天朝】“没有智能手机没有微信不配活着”](/articles/cdt/386522.md)
 
 1-27 [【网络民议】北京学生因演讲同性恋反歧视的内容被退学](/articles/cdt/386527.md)
-
-1-27 [看新闻 | 中国官员再出狂言：老弱病残孕要往死里打！](/articles/cdt/386538.md)
-
-1-27 [澎湃新闻 | 贵州女子微信群骂社区支书“草包”，被毕节警方跨市铐走行拘](/articles/cdt/386539.md)
 
