--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-28 [“德国小姐”的今与昔](/articles/dw/1043662.md)
+
 2-28 [香港47人因初选违反国安法被起诉](/articles/dw/1043663.md)
 
 2-28 [缅甸军方镇压示威民众造成多人伤亡](/articles/dw/1043664.md)
@@ -598,6 +600,4 @@
 2-11 [白宫成立军事工作组 拜登检视对华政策](/articles/dw/1043960.md)
 
 2-11 [德国政府让全国延长“停摆”至3月7日](/articles/dw/1043961.md)
-
-2-11 [贝多芬第七交响曲第三乐章](/articles/dw/1043962.md)
 
