--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-28 [样板还是承袭正统？中共为何高调纪念华国锋？](/articles/voa/1042575.md)
+
 2-28 [缅甸警方镇压示威第二天 多人死亡](/articles/voa/1042576.md)
 
 2-28 [司法部：中国商人企图偷窃通用电气商业秘密](/articles/voa/1042577.md)
@@ -598,6 +600,4 @@
 2-17 [中国加强稀土管制有何盘算？](/articles/voa/1042873.md)
 
 2-17 [去年新生儿同比大跌15% 中国恐“未富先老”](/articles/voa/1042874.md)
-
-2-17 [美国军舰在“南沙群岛”实施航行自由行动](/articles/voa/1042875.md)
 
