--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,7 @@
 
 2-28 [烧伤超人阿宝 | “鸿茅药酒”真的曾经献礼七大吗？](/articles/cdt/385434.md)
 
-2-28 [【立此存照】豆瓣 | 北京外卖“骑士联盟盟主”，疑似被捕。](/articles/cdt/385443.md)
+2-28 [【立此存照】豆瓣 | 北京外卖“骑士联盟盟主”，疑似被捕](/articles/cdt/385443.md)
 
 2-28 [法广 |  香港民主派47人被控“串谋颠覆国家政权罪” 明日提堂](/articles/cdt/385444.md)
 
