--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,7 +9,7 @@
 
 2-28 [BBC | 新疆“再教育营”：新文件揭穆斯林如何因蓄须、蒙面和上网被拘留](/articles/cdt/385447.md)
 
-2-28 [【网络民议】我喜欢的博主失去了自由，我会永远祝福她。](/articles/cdt/385450.md)
+2-28 [【网络民议】我喜欢的博主失去了自由，我会永远祝福她](/articles/cdt/385450.md)
 
 2-28 [端传媒 | Clubhouse“两岸房”三日记：如果没有墙，我们会跟彼此聊什么？（节选）](/articles/cdt/385456.md)
 
