--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-1 [Covid-19 : 菲律宾护士为抗疫损失惨重](/articles/rfi/1033861.md)
+
 3-1 [蓝绿纪念二二八事件74周年 坚守民主自由与理清世代责任信息共存 - 要闻解说](/articles/rfi/1033862.md)
 
 3-1 [惨案：印度一男被脚上绑刀的公鸡刺死](/articles/rfi/1033863.md)
@@ -598,6 +600,4 @@
 2-24 [马来西亚遣返上千缅甸非法移民 – 法国国际广播电台 - RFI](/articles/rfi/1034159.md)
 
 2-24 [汇丰计画削减全球办公空间近半 更聚焦亚洲业务 – 法国国际广播电台 - RFI](/articles/rfi/1034160.md)
-
-2-24 [塞内加尔今开打疫苗 总统称获习近平支持关照先得疫苗](/articles/rfi/1034161.md)
 
