--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-1 [拜登预期周一宣布对沙特阿拉伯政策](/articles/voa/1042567.md)
+
 3-1 [尼日利亚：父母焦急等待300名被绑架女孩归来](/articles/voa/1042568.md)
 
 3-1 [联合国：需要近40亿美元来防止也门大饥荒](/articles/voa/1042569.md)
@@ -598,6 +600,4 @@
 2-18 [美众院共和党人呼吁拜登采纳特朗普的孔子学院限制令](/articles/voa/1042865.md)
 
 2-18 [加拿大宣布重新审查BC省中国警察培训项目](/articles/voa/1042866.md)
-
-2-18 [学者谈凤凰卫视高层调整及港台停播BBC 忧北京全方位接管香港](/articles/voa/1042867.md)
 
