--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-1 [特朗普周日在保守派政治行动大会上讲话](/articles/voa/1042565.md)
+
 3-1 [联合国官员呼吁召开安理会会议讨论缅甸局势 美国将采取更多行动应对缅军方暴力](/articles/voa/1042566.md)
 
 3-1 [拜登预期周一宣布对沙特阿拉伯政策](/articles/voa/1042567.md)
@@ -598,6 +600,4 @@
 2-18 [时事大家谈: 习近平重手整肃政法系，打响20大权力保卫战？](/articles/voa/1042863.md)
 
 2-18 [俄欧外交危机 莫斯科频发威胁想达哪些目的？](/articles/voa/1042864.md)
-
-2-18 [美众院共和党人呼吁拜登采纳特朗普的孔子学院限制令](/articles/voa/1042865.md)
 
