--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-1 [否认创党传闻  特朗普暗示2024年再选总统](/articles/dw/1043657.md)
+
+3-1 [美国前联合国大使吁抵制北京冬奥](/articles/dw/1043658.md)
+
 3-1 [从中国进口原料  巴西生产疫苗有望](/articles/dw/1043659.md)
 
 3-1 [匈牙利总理接种中国疫苗 捷克考虑进口卫星V号](/articles/dw/1043660.md)
@@ -596,8 +600,4 @@
 2-11 [专访世卫专家组成员：病毒溯源是复杂拼图](/articles/dw/1043955.md)
 
 2-11 [“实鼠不疫 牛转乾坤”](/articles/dw/1043956.md)
-
-2-11 [猪肉又涨价? 试试3D打印肉](/articles/dw/1043957.md)
-
-2-11 [德外交部：中方“侵入性”防疫  不建议前往中国](/articles/dw/1043958.md)
 
