--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+3-1 [中国工信部长：恶性竞争下中国稀土只卖出“土”价 没卖出“稀”价](/articles/reuters/1040932.md)
+
 3-1 [中国商务部：加大产业链招商积极吸引战略投资 降低外资研发中心享受政策门槛](/articles/reuters/1040933.md)
 
 3-1 [一周展望：投资者权衡股市新主导 关注标普500指数能否维持涨势](/articles/reuters/1040934.md)
@@ -598,6 +600,4 @@
 1-29 [中国央行：放开信用卡透支利率上下限时机已成熟 有利于鼓励公平有序竞争](/articles/reuters/1041230.md)
 
 1-29 [路透测算的人民币中间价料升至6.4657元附近 风险偏好压低美指](/articles/reuters/1041231.md)
-
-1-29 [联合国秘书长古特雷斯称希望美中关系能够“重置”](/articles/reuters/1041232.md)
 
