--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+3-1 [自动驾驶让车险业走向何方](/articles/ft/1045970.md)
+
+3-1 [一周世界舆论聚焦：世界核心经济技术或将分化成“三个世界”格局](/articles/ft/1045971.md)
+
+3-1 [冯德莱恩：欧盟须为“大流行病时代”做好准备](/articles/ft/1045972.md)
+
 3-1 [流量经济，最终可能导致集体“不经济”](/articles/ft/1045973.md)
 
 3-1 [美国众议院通过拜登1.9万亿美元新冠救助方案](/articles/ft/1045974.md)
@@ -594,10 +600,4 @@
 1-17 [点外卖带来的“慵懒”到底有没有价值——答项飙的三个问题](/articles/ft/1046268.md)
 
 1-16 [拉舍特当选德国基民盟主席](/articles/ft/1046269.md)
-
-1-15 [美国通胀压力已在酝酿之中](/articles/ft/1046270.md)
-
-1-15 [推特封特朗普号事件中的公权、私权与言论自由](/articles/ft/1046271.md)
-
-1-15 [德国基民盟主席选举可能导致欧盟政策变化](/articles/ft/1046272.md)
 
