--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-1 [促北京释放两加拿大人 布林肯: 把人当棋子不可接受](/articles/dw/1043655.md)
+
+3-1 [「奶茶联盟」遍地开花   亚洲多地集会挺缅甸](/articles/dw/1043656.md)
+
 3-1 [否认创党传闻  特朗普暗示2024年再选总统](/articles/dw/1043657.md)
 
 3-1 [美国前联合国大使吁抵制北京冬奥](/articles/dw/1043658.md)
@@ -596,8 +600,4 @@
 2-11 [拜登制裁缅甸军方高层  凍結10亿美元資金](/articles/dw/1043953.md)
 
 2-11 [德外交部：中方“侵入性”检测  不建议前往中国](/articles/dw/1043954.md)
-
-2-11 [专访世卫专家组成员：病毒溯源是复杂拼图](/articles/dw/1043955.md)
-
-2-11 [“实鼠不疫 牛转乾坤”](/articles/dw/1043956.md)
 
