--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-1 [特朗普表示可能再次竞选总统](/articles/ft/1045969.md)
+
 3-1 [自动驾驶让车险业走向何方](/articles/ft/1045970.md)
 
 3-1 [一周世界舆论聚焦：世界核心经济技术或将分化成“三个世界”格局](/articles/ft/1045971.md)
@@ -598,6 +600,4 @@
 1-17 [徐瑾经济人书单：2020年十大好书](/articles/ft/1046267.md)
 
 1-17 [点外卖带来的“慵懒”到底有没有价值——答项飙的三个问题](/articles/ft/1046268.md)
-
-1-16 [拉舍特当选德国基民盟主席](/articles/ft/1046269.md)
 
