--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-1 [2021年金球奖：赵婷凭《无依之地》获两项大奖](/articles/nyt/1047138.md)
+
 3-1 [47名香港亲民主人士被控“串谋颠覆”](/articles/nyt/1047139.md)
 
 3-1 [当代中国文字狱事件：从上访者到“侮辱英烈”](/articles/nyt/1047140.md)
@@ -598,6 +600,4 @@
 12-14 [英国间谍小说巨匠约翰·勒卡雷去世](/articles/nyt/1047436.md)
 
 12-14 [中国民族主义者眼中的世界：中国崛起，西方衰落](/articles/nyt/1047437.md)
-
-12-14 [六个重点问题，解读美国选举人团投票](/articles/nyt/1047438.md)
 
