--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-1 [不畏军事政变一个月来最血腥镇压 缅甸民众继续上街示威](/articles/voa/1042561.md)
+
 3-1 [特朗普暗示或将再度参选总统 共和党依旧是“特朗普党”？](/articles/voa/1042562.md)
 
 3-1 [因《国安法》被捕美裔律师关尚义受警方传唤](/articles/voa/1042563.md)
@@ -598,6 +600,4 @@
 2-18 [朝核问题：美韩同盟的软肋](/articles/voa/1042859.md)
 
 2-18 [立陶宛以安全为由禁用中国的机场扫描设备](/articles/voa/1042860.md)
-
-2-18 [日本不排除在尖阁诸岛使用武器](/articles/voa/1042861.md)
 
