--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-1 [光传媒｜林夕：如何治疗“翠字恐惧症”？](/articles/cdt/385430.md)
+
 3-1 [【立此存照】澎湃 | 网民“辣笔小球”被批捕](/articles/cdt/385431.md)
 
 2-28 [烧伤超人阿宝 | “鸿茅药酒”真的曾经献礼七大吗？](/articles/cdt/385434.md)
@@ -598,6 +600,4 @@
 1-27 [【一种声音】侠客岛｜“草包支书”一出口，警察铐上就带走？](/articles/cdt/386511.md)
 
 1-27 [自由亚洲｜习近平家属个人信息外泄 24网民集体获刑 20岁运维遭重判14年](/articles/cdt/386513.md)
-
-1-27 [【网络民议】问：有门不开为啥翻墙呢？答：有桥也不走摸石头呢！](/articles/cdt/386518.md)
 
