--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+3-1 [中印冲突与孟买大停电：来自北京的一记警告？](/articles/nyt/1047134.md)
+
+3-1 [养老院频繁“爆雷”背后，中国的老龄化危机](/articles/nyt/1047135.md)
+
 3-1 [赵婷创造历史，首位亚洲女导演问鼎金球奖](/articles/nyt/1047136.md)
 
 3-1 [离婚冷静期引反弹，中国多地离婚申请率猛增](/articles/nyt/1047137.md)
@@ -596,8 +600,4 @@
 12-15 [特朗普童年故居乏人问津，房主发起众筹“献礼”](/articles/nyt/1047432.md)
 
 12-15 [疫情中消费需求强劲，美国自中国进口额激增](/articles/nyt/1047433.md)
-
-12-15 [盘点2020年18件第一次发生的事](/articles/nyt/1047434.md)
-
-12-15 [简报：中国民族主义者眼中的世界；美国对华进口量激增](/articles/nyt/1047435.md)
 
