--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-1 [“港版美丽岛”大审    重燃港人抗争意志](/articles/rfa/1046267.md)
+
 2-27 [二二八与爱憎蒋介石](/articles/rfa/1046268.md)
 
 2-27 [港版国安法魔掌伸进大学校园   学生组织遭全方位打压](/articles/rfa/1046269.md)
@@ -598,6 +600,4 @@
 1-29 [家暴何时休？谭维维女权专辑热度不减](/articles/rfa/1046565.md)
 
 1-28 [疫情下中国开启春运 大批民工为避检测提前返乡](/articles/rfa/1046566.md)
-
-1-28 [中国海警法允许动武 台学者：北京在刺激全世界](/articles/rfa/1046567.md)
 
