--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-1 [客座评论：为什么习近平特别在意中国全面脱贫](/articles/dw/1043654.md)
+
 3-1 [促北京释放两加拿大人 布林肯: 把人当棋子不可接受](/articles/dw/1043655.md)
 
 3-1 [「奶茶联盟」遍地开花   亚洲多地集会挺缅甸](/articles/dw/1043656.md)
@@ -598,6 +600,4 @@
 2-11 [人道组织要求疫苗生产商暂时放弃相关专利](/articles/dw/1043952.md)
 
 2-11 [拜登制裁缅甸军方高层  凍結10亿美元資金](/articles/dw/1043953.md)
-
-2-11 [德外交部：中方“侵入性”检测  不建议前往中国](/articles/dw/1043954.md)
 
