--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-1 [网络安全公司称中国黑客攻击印度疫苗制造商](/articles/voa/1042558.md)
+
 3-1 [两会开幕在即 观察人士：人大功能比“橡皮图章”还倒退](/articles/voa/1042559.md)
 
 3-1 [美国一个国安会提出措施防止中国军方人员混入美国高校](/articles/voa/1042560.md)
@@ -598,6 +600,4 @@
 2-18 [曾为政治盟友的前总统特朗普与参院共和党领袖麦康奈尔尖锐互怼](/articles/voa/1042856.md)
 
 2-18 [布林肯：美打算月底前支付世卫会费，所有国家必须提供新冠疫情爆发初期的数据](/articles/voa/1042857.md)
-
-2-18 [英国对华民意下降 近半数英国人认为北京是威胁](/articles/voa/1042858.md)
 
