--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-1 [数十访民联署举报无锡两会非法维稳](/articles/rfa/1046264.md)
+
 3-1 [新疆准许部分少数民族与境外微信联系 中国考虑放宽哈人前往哈萨克](/articles/rfa/1046265.md)
 
 3-1 [中共建党百年 开学从娃娃抓起学党课](/articles/rfa/1046266.md)
@@ -598,6 +600,4 @@
 1-29 [华为首座境外工厂落脚法囯  选址环军事地点引间谍质疑](/articles/rfa/1046562.md)
 
 1-29 [加拿大联合印太盟国抗中   首度参与四国军演](/articles/rfa/1046563.md)
-
-1-29 [蚂蚁集团或将整体转型为金融控股公司](/articles/rfa/1046564.md)
 
