--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-2 [政变以来昂山素季首次公开露面 再背两项新罪名](/articles/voa/1042556.md)
+
+3-1 [2020年中国媒体自由迅速下滑 新冠疫情成新的媒体限制手段](/articles/voa/1042557.md)
+
 3-1 [网络安全公司称中国黑客攻击印度疫苗制造商](/articles/voa/1042558.md)
 
 3-1 [两会开幕在即 观察人士：人大功能比“橡皮图章”还倒退](/articles/voa/1042559.md)
@@ -596,8 +600,4 @@
 2-18 [白宫要义: 白宫重申拜习通话及与中国接触时持续提出人权议题](/articles/voa/1042854.md)
 
 2-18 [专家视点: 社交媒体时代的言论自由](/articles/voa/1042855.md)
-
-2-18 [曾为政治盟友的前总统特朗普与参院共和党领袖麦康奈尔尖锐互怼](/articles/voa/1042856.md)
-
-2-18 [布林肯：美打算月底前支付世卫会费，所有国家必须提供新冠疫情爆发初期的数据](/articles/voa/1042857.md)
 
