--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-2 [中共政权受害者联盟在澳洲成立](/articles/rfa/1046262.md)
+
 3-2 [千亿半导体计划成泡影  武汉弘芯遣散员工](/articles/rfa/1046263.md)
 
 3-1 [数十访民联署举报无锡两会非法维稳](/articles/rfa/1046264.md)
@@ -598,6 +600,4 @@
 1-29 [报告：中共靠言论审查“打败”疫情](/articles/rfa/1046560.md)
 
 1-29 [广州律师发起问卷调查 曝光看守所内幕](/articles/rfa/1046561.md)
-
-1-29 [华为首座境外工厂落脚法囯  选址环军事地点引间谍质疑](/articles/rfa/1046562.md)
 
