--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-2 [王晓渔：小粉红为什么比小红多了一个“粉”字](/articles/cdt/385418.md)
+
 3-1 [【异闻观止】“辣笔小球”电视道歉：我的行为是一种良知泯灭的行为](/articles/cdt/385422.md)
 
 3-1 [人文英华｜中国底层县城：除了性生活，就剩打麻将](/articles/cdt/385424.md)
@@ -598,6 +600,4 @@
 1-28 [【CDT连载】巴奴的救赎（27）](/articles/cdt/386485.md)
 
 1-28 [【墙的妙用】 #世卫不建议接种莫德纳新冠疫苗# 上了微博热搜](/articles/cdt/386497.md)
-
-1-28 [【微博】博士生因区政府阻挠放弃回家：为何过年的团圆如此艰难。](/articles/cdt/386498.md)
 
