--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-2 [2021年金球奖：《无依之地》大获成功](/articles/dw/1043639.md)
+
 3-2 [贪腐罪成 法前总统萨科齐被判刑](/articles/dw/1043640.md)
 
 3-2 [中国攻击女性证人回应国际社会对新疆政策的指责](/articles/dw/1043641.md)
@@ -598,6 +600,4 @@
 2-12 [英国经济去年严重萎缩](/articles/dw/1043937.md)
 
 2-12 [称美国像纳粹德国 “星战”女星被炒鱿鱼](/articles/dw/1043938.md)
-
-2-12 [2021年柏林电影节的大咖评委](/articles/dw/1043939.md)
 
