--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-2 [五分之一的比特币产自新疆   好事坏事？](/articles/rfa/1046258.md)
+
+3-2 [新法定旧罪    “辣笔小球”被批捕](/articles/rfa/1046259.md)
+
 3-2 [孟晚舟引渡案开庭  辩方提四大论述 检方严阵以待](/articles/rfa/1046260.md)
 
 3-2 [香港47人被控颠复国家政权  欧美谴责国安法已成消除政治异己工具](/articles/rfa/1046261.md)
@@ -596,8 +600,4 @@
 1-29 [台上官唱“春运拉开序幕”    多地客运线因客流急跌停运](/articles/rfa/1046556.md)
 
 1-29 [宝武集团再兼并地方钢企    钢铁业迈向计划经济年代](/articles/rfa/1046557.md)
-
-1-29 [中国经济2020年正增长 中国模式胜利了吗？](/articles/rfa/1046558.md)
-
-1-29 [拜登警告勿扩张   中国防部：遏止中国不可能](/articles/rfa/1046559.md)
 
