--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-2 [美国政府报告：严防北京窃取人工智能敏感技术](/articles/voa/1042547.md)
+
+3-2 [多数加拿大人主张：与全球民主国家联手应对中国挑战](/articles/voa/1042548.md)
+
+3-2 [美国贸易代表办公室：拜登政府将使用“一切可以使用的工具”应对中国不公平贸易做法 关注新疆强迫劳动项目](/articles/voa/1042549.md)
+
 3-2 [时事大家谈: 脱贫攻坚创“人间奇迹”，习近平运动治国的典范？](/articles/voa/1042550.md)
 
 3-2 [47名香港民主派人士被控串谋颠覆罪提堂 逾千市民庭外声援](/articles/voa/1042551.md)
@@ -594,10 +600,4 @@
 2-18 [美日澳印外长会晤 拜登政府沿用上届政府关键策略应对中国挑战](/articles/voa/1042845.md)
 
 2-18 [拜登提高接收难民上限 重新安置仍需时日](/articles/voa/1042846.md)
-
-2-18 [恢复软实力：国会新领导人寻求拓展美国外交](/articles/voa/1042847.md)
-
-2-18 [爱沙尼亚情报部门警告当心“北京主导的被静音世界“ 中国要求修改报告但被拒绝](/articles/voa/1042848.md)
-
-2-18 [美国偶像级保守派电台名嘴因癌症逝世](/articles/voa/1042849.md)
 
