--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-2 [印度：孟买大停电可能是网络破坏事件 但无证据表明与中国黑客有关](/articles/voa/1042546.md)
+
 3-2 [美国政府报告：严防北京窃取人工智能敏感技术](/articles/voa/1042547.md)
 
 3-2 [多数加拿大人主张：与全球民主国家联手应对中国挑战](/articles/voa/1042548.md)
@@ -598,6 +600,4 @@
 2-18 [被控为中国窃取情报的纽约藏裔警察染新冠获保释候审](/articles/voa/1042844.md)
 
 2-18 [美日澳印外长会晤 拜登政府沿用上届政府关键策略应对中国挑战](/articles/voa/1042845.md)
-
-2-18 [拜登提高接收难民上限 重新安置仍需时日](/articles/voa/1042846.md)
 
