--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-2 [香港民主派初选案提堂 多国代表吁北京撤告](/articles/dw/1043636.md)
+
+3-2 [美国国安委员会：大学应防中国窃取技术](/articles/dw/1043637.md)
+
 3-2 [台北在北京规划的主轴上 台媒怒批“又在做梦”](/articles/dw/1043638.md)
 
 3-2 [2021年金球奖：《无依之地》大获成功](/articles/dw/1043639.md)
@@ -596,8 +600,4 @@
 2-12 [德语媒体：中国的人口陷阱](/articles/dw/1043934.md)
 
 2-12 [德國理髮師苦盼開門營業](/articles/dw/1043935.md)
-
-2-12 [巴西卫生部长：亚马逊变种传染力强三倍](/articles/dw/1043936.md)
-
-2-12 [英国经济去年严重萎缩](/articles/dw/1043937.md)
 
