--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+3-2 [为什么习近平仍对香港穷追不舍？](/articles/nyt/1047132.md)
+
+3-2 [简报：中国加快推进数字人民币；香港罕见再现抗议活动](/articles/nyt/1047133.md)
+
 3-1 [中印冲突与孟买大停电：来自北京的一记警告？](/articles/nyt/1047134.md)
 
 3-1 [养老院频繁“爆雷”背后，中国的老龄化危机](/articles/nyt/1047135.md)
@@ -596,8 +600,4 @@
 12-16 [国际刑事法院决定不对中国拘禁穆斯林展开调查](/articles/nyt/1047430.md)
 
 12-15 [世界上最重要的地方：台湾](/articles/nyt/1047431.md)
-
-12-15 [特朗普童年故居乏人问津，房主发起众筹“献礼”](/articles/nyt/1047432.md)
-
-12-15 [疫情中消费需求强劲，美国自中国进口额激增](/articles/nyt/1047433.md)
 
