--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-2 [你们没有被遗忘，劳改基金会向异议人士家属送去捐助](/articles/voa/1042531.md)
+
+3-2 [美国：中国必须提高其碳中和的雄心](/articles/voa/1042532.md)
+
+3-2 [拜登政府称将对中国贸易做法采取强硬立场](/articles/voa/1042533.md)
+
 3-2 [专家针对新冠疫苗安全顾虑答疑](/articles/voa/1042534.md)
 
 3-2 [美国会两党携手拟法强化供应链 民主党领袖也喊“击败中国”](/articles/voa/1042535.md)
@@ -594,10 +600,4 @@
 2-19 [黎智英申请保释前夕狱中再次被捕 加控涉嫌协助12港人偷渡台湾](/articles/voa/1042829.md)
 
 2-19 [多个非政府组织联名致信拜登总统 敦促将中国人权纳入美中政策优先考虑](/articles/voa/1042830.md)
-
-2-19 [台湾采购近2000万剂新冠疫苗，中国疫苗不在其中](/articles/voa/1042831.md)
-
-2-19 [香港正式批准科兴新冠疫苗在香港紧急使用](/articles/voa/1042832.md)
-
-2-19 [分析人士称中国新《海警法》针对东南亚国家](/articles/voa/1042833.md)
 
