--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-2 [法国前总统萨科齐因腐败被判入狱](/articles/ft/1045964.md)
+
 3-2 [标普500指数创下去年6月以来最大单日涨幅](/articles/ft/1045965.md)
 
 3-2 [恒生指数将洗牌 纳入更多内地成分股](/articles/ft/1045966.md)
@@ -598,6 +600,4 @@
 1-18 [中国股市：焦灼的“分化”](/articles/ft/1046262.md)
 
 1-18 [纳瓦尔尼回俄罗斯后被警方拘留](/articles/ft/1046263.md)
-
-1-18 [拜登计划一上任就立即逆转特朗普的一些政策](/articles/ft/1046264.md)
 
