--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+3-2 [郭树清称中国继续鼓励外资金融机构进入 外资进入不会干扰中国金融市场](/articles/reuters/1040882.md)
+
 3-2 [焦点：陷入新冠疫情一年后 美国经济开始转晴](/articles/reuters/1040883.md)
 
 3-2 [中国银保监会主席：目前外资流入的规模和速度在可控范围内](/articles/reuters/1040884.md)
@@ -598,6 +600,4 @@
 1-30 [美股受强生疫苗数据和GameStop效应拖累收挫 周线创10月来最大跌幅](/articles/reuters/1041180.md)
 
 1-29 [中国外汇市场12月成交再增两成 其中即期增三成突破1.6万亿美元](/articles/reuters/1041181.md)
-
-1-29 [欧洲央行不太可能利用降息来提振受疫情打击的经济--消息人士](/articles/reuters/1041182.md)
 
