--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+3-2 [港泛民47人涉违国安法案 2日继续审理 – 法国国际广播电台 - RFI](/articles/rfi/1033800.md)
+
+3-2 [川普过往猛批疫苗 遭爆卸任前已先接种 – 法国国际广播电台 - RFI](/articles/rfi/1033801.md)
+
+3-2 [中国采肛筛酿心理痛苦 日：日本公民应排除在外 – 法国国际广播电台 - RFI](/articles/rfi/1033802.md)
+
+3-2 [世卫：全球今年无法消灭病毒 – 法国国际广播电台 - RFI](/articles/rfi/1033803.md)
+
 3-2 [禁止质疑解放军死亡数字 北京紧急立法追诉辣笔小球](/articles/rfi/1033804.md)
 
 3-2 [第71届柏林电影节开幕](/articles/rfi/1033805.md)
@@ -592,12 +600,4 @@
 2-25 [河北张姓女去年贴文揭武汉封城7大惨况遭寻衅滋事罪重判](/articles/rfi/1034098.md)
 
 2-25 [法国外交部长谴责 中国制度性压迫新疆维吾尔人 – 法国国际广播电台 - RFI](/articles/rfi/1034099.md)
-
-2-25 [西班牙转型正义 移除境内最后1座佛朗哥雕像 – 法国国际广播电台 - RFI](/articles/rfi/1034100.md)
-
-2-24 [中印边境打归打 两国经贸无大碍](/articles/rfi/1034101.md)
-
-2-24 [中国国药疫苗攻破欧盟 第一国匈牙利今天开打](/articles/rfi/1034102.md)
-
-2-24 [海航信评再遭棒打跌至C](/articles/rfi/1034103.md)
 
