--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-2 [自由亚洲 | “港版美丽岛”大审判  重燃港人抗争意志](/articles/cdt/385402.md)
+
 3-2 [英国驻华使馆 | 外国媒体憎恨中国吗？](/articles/cdt/385403.md)
 
 3-2 [回声Huisheng | 反对一切形式的高考招生性别歧视，她们寄出了建议信](/articles/cdt/385406.md)
@@ -598,6 +600,4 @@
 1-29 [健康界｜自残式采血，完全不顾传染病，疯狂的“血吊坠”大肆收割年轻恋人！](/articles/cdt/386471.md)
 
 1-28 [骚客文艺｜鹤壁高中的“示众式”教育，是“以人为本”还是“以人为笨”](/articles/cdt/386475.md)
-
-2-1 [【中国哭墙】李医生，谢谢你来过（1月24-31日，2021年）](/articles/cdt/386476.md)
 
