--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-2 [迫不及待大肆围剿泛民人士 港府继续审判47名“串谋颠覆国家政权”者](/articles/voa/1042530.md)
+
 3-2 [你们没有被遗忘，劳改基金会向异议人士家属送去捐助](/articles/voa/1042531.md)
 
 3-2 [美国：中国必须提高其碳中和的雄心](/articles/voa/1042532.md)
@@ -598,6 +600,4 @@
 2-19 [罗冠聪：中共的目标就是权力 民主国家须联合应对](/articles/voa/1042828.md)
 
 2-19 [黎智英申请保释前夕狱中再次被捕 加控涉嫌协助12港人偷渡台湾](/articles/voa/1042829.md)
-
-2-19 [多个非政府组织联名致信拜登总统 敦促将中国人权纳入美中政策优先考虑](/articles/voa/1042830.md)
 
