--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-2 [台港青年齐抗暴 声援香港中大以及47遭起诉民主派成员](/articles/rfa/1046250.md)
+
 3-2 [中国律师 : 香港法庭审讯过程大陆化](/articles/rfa/1046251.md)
 
 3-2 [专访：中国留学生撑香港遭死亡威胁 用法律自卫](/articles/rfa/1046252.md)
@@ -598,6 +600,4 @@
 1-30 [匿名前官员：美应修改对华战略 明确针对习近平](/articles/rfa/1046548.md)
 
 1-30 [美国安顾问：中国要为其行为付出代价](/articles/rfa/1046549.md)
-
-1-30 [藏语倡导者扎西文色获释   国际促中国尊重人权](/articles/rfa/1046550.md)
 
