--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+3-2 [旗下事业笼罩监管低气压 马云痛失中国首富头衔落居第四名](/articles/reuters/1040872.md)
+
+3-2 [中国股市逆转涨幅收跌逾1% 银保监会对资金流入风险发出警告](/articles/reuters/1040873.md)
+
 3-2 [香港当局考虑允许SPAC上市](/articles/reuters/1040874.md)
 
 3-2 [中国2月人民币主要品种成交环比续降25%创一年新低 因春节因素扰动](/articles/reuters/1040875.md)
@@ -596,8 +600,4 @@
 1-30 [强生称其单剂新冠疫苗全球有效性为66% 对多种变异病毒有效](/articles/reuters/1041170.md)
 
 1-30 [全球政府和企业今年发债规模预计将降至8万亿美元--标普全球评级](/articles/reuters/1041171.md)
-
-1-30 [中国华融原董事长赖小民被执行死刑 最高院解释为何“重大立功却不从轻”](/articles/reuters/1041172.md)
-
-1-30 [中国央行称将强化金融科技创新活动审慎监管 建设国家金融科技风险监控中心](/articles/reuters/1041173.md)
 
