--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-2 [V2EX｜Rexxar：昨天在微信群指点江山，我被请喝茶了](/articles/cdt/385397.md)
+
 3-2 [自由亚洲 | “港版美丽岛”大审判  重燃港人抗争意志](/articles/cdt/385402.md)
 
 3-2 [英国驻华使馆 | 外国媒体憎恨中国吗？](/articles/cdt/385403.md)
@@ -598,6 +600,4 @@
 1-29 [【网络民议】乌合麒麟：今年的舆论环境将会更加凶险 而我会专职反美](/articles/cdt/386470.md)
 
 1-29 [健康界｜自残式采血，完全不顾传染病，疯狂的“血吊坠”大肆收割年轻恋人！](/articles/cdt/386471.md)
-
-1-28 [骚客文艺｜鹤壁高中的“示众式”教育，是“以人为本”还是“以人为笨”](/articles/cdt/386475.md)
 
