--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-2 [国安法生效後最大抓捕 民主派急需新运作空间](/articles/dw/1043635.md)
+
 3-2 [香港民主派初选案提堂 多国代表吁北京撤告](/articles/dw/1043636.md)
 
 3-2 [美国国安委员会：大学应防中国窃取技术](/articles/dw/1043637.md)
@@ -598,6 +600,4 @@
 2-12 [森喜朗性别歧视风波请辞  点名更老男人接任又被轰](/articles/dw/1043933.md)
 
 2-12 [德语媒体：中国的人口陷阱](/articles/dw/1043934.md)
-
-2-12 [德國理髮師苦盼開門營業](/articles/dw/1043935.md)
 
